# korea-stock-monitor

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  architecture.md
examples/: core.yaml  kiwoom.yaml
ksmonitor/: __init__.py
ksmonitor/adapters/: _shared.py
ksmonitor/adapters/_base/: auth.py  config.py  endpoints.py
ksmonitor/adapters/kis/: __init__.py  auth.py  client.py  config.py
ksmonitor/adapters/kis/endpoints/: __init__.py  _base.py  _common.py  inquire_price.py  volume_rank.py
ksmonitor/adapters/kiwoom/: __init__.py  auth.py  client.py  config.py
ksmonitor/adapters/kiwoom/endpoints/: __init__.py  _base.py  _common.py  rkinfo.py
ksmonitor/adapters/telegram/: bot.py
ksmonitor/core/: alerts.py  client.py  datastore.py  market_time.py  protocols.py
monitor/: __init__.py
monitor/adapters/kis/: __init__.py  auth.py  client.py  config.py  endpoints.py
tests/core/: test_alerts.py  test_datastore.py  test_market_time.py
tests/kiwoom/: conftest.py  test_auth.py  test_client.py  test_config.py  test_endpoints.py
