[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "korea-stock-monitor"
version = "0.1.0"
readme = "README.md"
description = "Korean stock monitoring and alerting via KIS and Kiwoom APIs"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.7.0",
    "polars>=1.39.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "websockets>=16.0",
]

[tool.uv.build-backend]
module-name = "ksmonitor"
module-root = ""