[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "korea-stock-monitor"
version = "0.9.0.dev0"
readme = "README.md"
description = "Korean stock monitoring and alerting via KIS and Kiwoom APIs"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.7.0",
    "python-telegram-bot[job-queue]==22.6",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "websockets>=16.0",
]

[tool.uv.build-backend]
module-name = "ksmonitor"
module-root = ""

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "polars>=1.39.3",
    "numpy>=2.4.4",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
